--- a/index.html
+++ b/index.html
@@ -12,15 +12,10 @@
       margin: 0;
       padding: 0;
     }
-    .logo-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    .logo {
       margin-top: 60px;
-      flex-wrap: wrap;
-      gap: 20px;
     }
-    .logo-container img {
+    img {
       max-width: 400px;
       width: 80%;
       height: auto;
@@ -36,9 +31,8 @@
   </style>
 </head>
 <body>
-  <div class="logo-container">
+  <div class="logo">
     <img src="ApexCreations Logo.png" alt="Apex Creations Logo">
-    <img src="MoreComingSoon.png" alt="More Coming Soon">
   </div>
   <h1>Welcome to Apex Creations</h1>
   <p>Etch. Print. Create.</p>
