--- a/index.html
+++ b/index.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Apex Creations</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #1a1a1a;
-      color: #e0e0e0;
-      text-align: center;
       margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #e6f0fa;
+      color: #333;
     }
-    .logo {
-      margin-top: 60px;
+    header {
+      text-align: center;
+      padding: 3rem 2rem 1rem;
+      background-color: #ffffff;
     }
-    img {
-      max-width: 400px;
-      width: 80%;
+    header img {
+      max-width: 700px; /* Increased logo size */
       height: auto;
     }
-    .contact {
-      margin-top: 40px;
-      font-size: 1.2em;
+    .section {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
-    a {
-      color: #00bfff;
-      text-decoration: none;
+    .section h2 {
+      color: #005a8d;
+      margin-bottom: 1rem;
+    }
+    .contact {
+      background-color: #f0f8ff;
+      padding: 1rem;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <div class="logo">
-    <img src="ApexCreations Logo.png" alt="Apex Creations Logo">
+
+  <header>
+    <img src="ApexCreations Logo.png" alt="Company Logo" />
+  </header>
+
+  <div class="section">
+    <h2>About Us</h2>
+    <p>
+      We offer precision laser engraving and advanced 3D printing services for glassware, metal, slate, and more. Whether you're customizing a whiskey glass, fabricating a prototype, or creating standout branding materials, we bring your ideas to life with clarity, craftsmanship, and cutting-edge technology.
+    </p>
   </div>
-  <h1>Welcome to Apex Creations</h1>
-  <p>Etch. Print. Create.</p>
-  <div class="contact">
-    <p><strong>Owner:</strong> Jeff Melick</p>
-    <p><strong>Email:</strong> <a href="mailto:Jeff.Melick@ApexCreations.net">Jeff.Melick@ApexCreations.net</a></p>
+
+  <div class="section contact">
+    <h2>Owner</h2>
+    <p><strong>Jeff Melick</strong></p>
+    <p>Email: <a href="mailto:Jeff.Melick@ApexCreations.net">Jeff.Melick@ApexCreations.net</a></p>
   </div>
+
 </body>
 </html>
