--- a/index.html
+++ b/index.html
@@ -201,22 +201,22 @@
 
     <div class="gallery">
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image1.jpg" alt="Engraved glassware">
+            <img src="Image1.jpg" alt="Engraved glassware">
         </div>
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image2.jpg" alt="Slate coasters">
+            <img src="Image2.jpg" alt="Slate coasters">
         </div>
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image3.jpg" alt="3D printed item">
+            <img src="Image3.jpg" alt="3D printed item">
         </div>
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image4.jpg" alt="Custom engraving">
+            <img src="Image4.jpg" alt="Custom engraving">
         </div>
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image5.jpg" alt="Personalized gift">
+            <img src="Image5.jpg" alt="Personalized gift">
         </div>
         <div class="gallery-item" onclick="openFullscreen(this)">
-            <img src="image6.jpg" alt="Creative design">
+            <img src="Image6.jpg" alt="Creative design">
         </div>
     </div>
 
